--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
     <div class="quiz-section">
         <div id="quiz">
             <h2 class="question" id="question">quiz question</h2>
+            <hr />
+            <ul>
+            <li>
+                <input type="radio" name="answer" class="answer" id="a" />
+                <label for="a" id="option_1">Quiz Options</label>
+            </li>
+            <li>
+                <input type="radio" name="answer" class="answer" id="a" />
+                <label for="a" id="option_1">Quiz Options</label>
+            </li>
+            <li>
+                <input type="radio" name="answer" class="answer" id="a" />
+                <label for="a" id="option_1">Quiz Options</label>
+            </li>
+            <li>
+                <input type="radio" name="answer" class="answer" id="a" />
+                <label for="a" id="option_1">Quiz Options</label>
+            </li>
+            </ul>
+            <hr>
 
+            <div class="btn">
+                <button type="submit" id="submit">Submit</button>
+
+            </div>
         </div>
     </div>
 </body>
