--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                 <label for="a" id="option_1">Quiz Options</label>
             </li>
             <li>
-                <input type="radio" name="answer" class="answer" id="a" />
-                <label for="a" id="option_1">Quiz Options</label>
+                <input type="radio" name="answer" class="answer" id="b" />
+                <label for="b" id="option_2">Quiz Options</label>
             </li>
             <li>
-                <input type="radio" name="answer" class="answer" id="a" />
-                <label for="a" id="option_1">Quiz Options</label>
+                <input type="radio" name="answer" class="answer" id="c" />
+                <label for="c" id="option_3">Quiz Options</label>
             </li>
             <li>
-                <input type="radio" name="answer" class="answer" id="a" />
-                <label for="a" id="option_1">Quiz Options</label>
+                <input type="radio" name="answer" class="answer" id="d" />
+                <label for="d" id="option_4">Quiz Options</label>
             </li>
             </ul>
             <hr>
